--- a/conditions_opdrachten/conditions_opdracht_2/index.html
+++ b/conditions_opdrachten/conditions_opdracht_2/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>opdracht titel</title>
-    <script src="js/script.js"></script>
+    <title>Saldo checken</title>
     <link rel="stylesheet" type="text/css"  href="css/style.css">
 </head>
-<body>
+<bod id="test">
     
+    <script src="js/script.js"></script>
 </body>
 </html>
