--- a/conditions_opdrachten/conditions_opdracht_1/index.html
+++ b/conditions_opdrachten/conditions_opdracht_1/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css"  href="css/style.css">
 </head>
 <body>
-    
+    <button onclick="myFunction()">Check Saldo</button>
 </body>
 </html>
